Bug 1737499 - Allow refresh rates slightly below the default rate, r=stransky

We can't use refresh rates far below the default one (60Hz) because
otherwise random CI tests start to fail. However, many users have
screens just below the default rate, e.g. 59.95Hz. So slightly
decrease the lower bound.

This is a drive-by optimization with no direct relationship to the bug.

Depends on D129522

Differential Revision: https://phabricator.services.mozilla.com/D129523